ENG-22: create api for getting words by subject
